v1: 合并模板